web/css/itou.css
/******************
 * BODY STYLES
 ******************/
.itou-info {
    background-color:#ddf2f3;
    padding:3rem 5rem;
    font-size:1.8rem;
    border-radius:7px;
    display: flex;
    flex-direction: row;
    margin-bottom:1rem;
}

.itou-info p {
    flex: 1 0;
    }

.itou-info h3 { padding:0; margin:0}
.itou-info .shape { 
    width: 55px;
    height: 55px;
    flex: none;
    margin-left: -4rem;
    margin-right: 1rem;
}
 
#main .itou-info-hidden {
    display: none; 
}

.itou-formtitle {
    display:block;
    text-align:center;
}

.itou-fieldgroup {
    border:0;
    border-radius: 7px;
    background-color: #FFFFFF;
    box-shadow: 4px 4px 20px 0 rgba(0,0,0,0.2);
    padding: .3rem 2rem 0 2rem;
}

.itou-fieldgroup legend {
    border:0;
    margin-bottom:1rem;
    font-family: roboto, sans-serif;
    text-transform: uppercase;
}

.itou-fieldgroup .label {
    text-align:left !important;
}

.itou-checkbox > .label-container {
    display:flex;
    justify-content: space-around;
    flex-flow: row nowrap;
}

.itou-checkbox div.label {
    width:100%;
}

#main .itou-checkbox .label-container,
#main .itou-checkbox .label {
    margin: 0;
    margin-top: -3px;
    font-size:1.2em;
}

.itou-checkbox .field-holder {
    width: 3rem;
    overflow: visible;
    flex: none;
}

/******************
 * REGISTER CONFIRMATION STYLES
 ******************/
 #form-registerlogin .buttonrow {
    display:flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
 }

#form-registerlogin .btn-outline-primary {
    box-sizing: border-box;
    border: 4px solid #0077FF;
    border-radius: 5px;
}

#form-registerlogin .btn-outline-primary:hover { background-color: #007BFF; }


#form-registerlogin .btn-primary {
    box-sizing: border-box;
    border: 4px solid #0077FF;
    border-radius: 5px;
    background-color: #007BFF;
}

#form-registerlogin .btn-primary:hover {
    border-color:#0069d9;
    background-color:#0069d9;
}

/******************
 * SUBSCRIPTION STYLES
 ******************/
#structure_modal, #structure_modal label {
    font-size: 1.5rem;
    line-height:2rem;
    font-weight: bold;
}


 #structure_modal ul {
    list-style-type:none;
}

 #structure_modal li {
    margin: 1rem 0;
}

 label {
    font-size:1.2em;
    }

 div.struct_type_select label {
    font-size:1.2em;
    }

 div.struct_type_select .option {
    margin: 1rem 0;
    }

fieldset {
    margin: 2rem 0;
}

body {
    font-size:14px;
}

/******************
 * HOME STYLES
 ******************/
 .listing-category button.btn.multiselect {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: 200px;
      padding: 0 .4em 0;
 }


.listing-category .multiselect-container.dropdown-menu {
    border:#495057 1px solid;
    background-color:#f7f7f7;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    width:auto;
    max-width: 150%;
    min-width:100%;
    padding: 0 4px 0;
}

.listing-category .multiselect-container.dropdown-menu > li > a  {
    white-space: normal;
    width:100%;
}

.listing-category .multiselect-container.dropdown-menu > li > a:hover  {
    background-color:#99cff2;
}



/******************
 * HEADER STYLES
 ******************/
@media screen and (min-width: 767px) and (max-width: 992px) {
    a.navbar-right {
        position: absolute;
        top: 0px;
        right: 0px;
    }

}

#bloc-marque {
    display:flex;
}

#bloc-marque img {
    height:31px;
    margin-top:6px;
    margin-right:2rem;
}
#bloc-marque div {
    font-size:.8em;
    display:block;
    color:#000;
    float:left;
}
#bloc-marque  span {
    float:left;
    font-size:.8em;
}

.navbar .navbar-nav li a {
    color:#007bff;
    display:block;
    padding:.5rem .3rem;
    font-size:1.1em;
}

.navbar .navbar-nav li a:hover {
    background-color:#e2f2ff;
    color:#0056b3;
}

.navbar a#new_offer, .navbar a.c2action {
    margin-top:5px;
    background-color:#007bff;
    border-color:#007bff;
}
.navbar a#new_offer:hover, .navbar a.c2action:hover {
    background-color:#0069d9;
    border-color:#0062cc;
}

.navbar #dashboard-dropdown {
    min-width:16rem;
}

/******************
 * FOOTER STYLES
 ******************/

.navarea #footer-list {
    display:flex;
    align-items: stretch;
    justify-content: space-between;
    width:100%;
}

.navarea #footer-list li {
    margin:0; padding:0;
    flex: 0 1 auto;
    display:block;
    text-align:center;
}

.navarea #footer-list a {
    margin:0; padding:0;
    font-size:1.2em;
    display:block;
    text-align:center;
    padding:3px 10px 3px;
}


.navarea #footer-list a:hover {
    text-decoration:underline;
}

footer img.min_trav {
    background-color:#fff;
    width:100px;
}

#footer-title {
    color:#fff;
    text-align:left;
    font-size:1.2em;
    font-family:verdana;
}

#footer-title h5 {
    color:#fff;
    font-size:1.2em;
    font-weight:300;
}

#footer-title h5 b {
    font-weight:900;
}

@media screen and (max-width:767px) {
    #footer-title {text-align:center; font-size:.8em}
}

@media screen and (max-width:576px) {
    .navarea #footer-list { display: block; }
    footer img.min_trav { width: 75px; }
}


/******************
 * NEW LISTING STYLES
 ******************/
#breadcrumbs a {
    text-decoration: none;
    color:#655;
}

.listing-container h1 {
    color: #000;
}

.listing-container h2 {
    color:#655;
    font-size:1em;
}


#main .nav-tabs > li.active > a,
#main .nav-tabs > li.active > a:hover,
#main .nav-tabs > li.active > a:focus {
    background-color: #fff;
    border:0;
}

#main .nav-tabs > li > a {
    background-color: #d8d8d8;
    color:#000;
    font-weight:bold;
}

#main .tab-content {
    border: 0;
}

.listing-area .tab-content {
    padding-top:0;
    padding-left:0;
    padding-right:0;
}

#main .gallery-slider .slide {
    border: 0;
}
    

.listing-presentation {
    color:#000;
    margin-top:2rem;
    margin-bottom:2rem;
}

.info-pratiques {
  border-radius: 7px;
  background-color: #FFFFFF;
  box-shadow: 4px 4px 20px 0 rgba(0,0,0,0.1);
  border:0;
}

.info-pratiques h2 {
    font-size:1.1em;
    font-weight:bold;
    text-align:center;
}

/******************
 * QUOTE STYLES
 ******************/
/* quote/_form_new */
div.legend {
    font-weight:bold;
    margin-top:1rem;
    margin-bottom:1rem;
}

div.form-message {
    background-color:#f7f7f7;
}

.form-message .quote-detail {
    margin: 0 0 17px;
}

.form-message .quote-detail li {
    padding: 0;
    font-weight: 700;
    margin: 0 26px 0 0;
}

.form-message .quote-detail strong {
    font-weight: 400;
}

.quote_detail {
    color: #495057;
    overflow: hidden;
    margin: 0 0 26px;
    border-radius: 5px;
    background: #f7f6f6;
    padding: 11px 33px 14px;
    border: #eaebec solid 1px;
}

.quote_detail li {
    float: left;
    width: 50%;
}

.quote_detail li:nth-child(2) {
    text-align: center;
}

.quote_detail li:last-child {
    text-align: right;
}

.quote_detail .icon {
    font-size: 24px;
    margin: 0 1px 0 0;
}

.quote_detail time {
    font-weight: 700;
    font-size: 18px;
    line-height: 21px;
}

.quote_detail strong {
    font-size: 18px;
    line-height: 21px;
}

.postarea .quote-detail {
    margin: 0 0 4px;
}

.postarea .quote-detail:before,
.postarea .quote-detail:after {
    content: " ";
    display: table;
}

.postarea .quote-detail:after {
    clear: both;
}

.postarea .quote-detail:before,
.postarea .quote-detail:after {
    content: " ";
    display: table;
}

.postarea .quote-detail:after {
    clear: both;
}

.postarea .quote-detail ul {
    float: left;
    width: 80%;
    margin: 2px 0 0;
}

.postarea .quote-detail ul li {
    padding: 0;
    color: #495057;
    font-weight: 400;
}

.postarea .quote-detail ul li time,
.postarea .quote-detail ul li span {
    margin: 0;
    float: none;
    font-size: 14px;
    font-weight: 400;
}

section.quote-quick-form {
    margin:0;
    padding-left:21px;
    padding-right:12px;
    border:0;
}

.btn-quote {
    color:#fff;
    font-weight:bold;
    background-color: #e54b28;
    width:100%;
    margin:2rem 0;
}

.info-pratiques dl dd{
    color:#999;
    font-weight:bold;
}

.info-pratiques dl {
    border-bottom: 1px solid #ccc;
    padding-bottom:2rem;
    background-size:24px;
    background-repeat: no-repeat;
    padding-left:28px;
}
.info-pratiques dl:last-child {
    border:0;
}

#info-perimetre { background-image: url('/images/shape_perimeter.png'); }
#info-horaire { background-image: url('/images/shape_horaire.png'); }
#info-site { background-image: url('/images/shape_site.png'); }

